{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 602,
  "lineage": "03be77f3-52da-c9be-2d1f-b52557012df0",
  "resources": [
    {
      "module": "module.jenkins",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "jenkins",
            "metadata": [
              {
                "generation": 0,
                "name": "jenkins",
                "resource_version": "2021",
                "uid": "944f68d5-1180-4904-96ab-dd12dc736eaf"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "jenkins"
          },
          "dependencies": [
            "data.aws_eks_cluster.eks",
            "data.aws_eks_cluster_auth.eks",
            "module.eks.aws_eks_addon.ebs_csi_driver",
            "module.eks.aws_eks_cluster.eks",
            "module.eks.aws_eks_node_group.general",
            "module.eks.aws_iam_openid_connect_provider.oidc",
            "module.eks.aws_iam_role.ebs_csi_irsa_role",
            "module.eks.aws_iam_role.eks",
            "module.eks.aws_iam_role.nodes",
            "module.eks.aws_iam_role_policy_attachment.amazon_ec2_container_registry_read_only",
            "module.eks.aws_iam_role_policy_attachment.amazon_eks_cni_policy",
            "module.eks.aws_iam_role_policy_attachment.amazon_eks_worker_node_policy",
            "module.eks.aws_iam_role_policy_attachment.ebs_irsa_policy",
            "module.eks.aws_iam_role_policy_attachment.eks",
            "module.eks.time_sleep.wait_for_iam_propagation",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:518036921225:internet-gateway/igw-078750e7bdc1fb90f",
            "id": "igw-078750e7bdc1fb90f",
            "owner_id": "518036921225",
            "region": "eu-central-1",
            "tags": {
              "Name": "lesson-7-vpc-igw"
            },
            "tags_all": {
              "Name": "lesson-7-vpc-igw"
            },
            "vpc_id": "vpc-02f711da09b1c7f47"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-078750e7bdc1fb90f",
            "id": "r-rtb-0a75a4214b81c908a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-central-1",
            "route_table_id": "rtb-0a75a4214b81c908a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:518036921225:route-table/rtb-0d8c82d8e0d8554c7",
            "id": "rtb-0d8c82d8e0d8554c7",
            "owner_id": "518036921225",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [],
            "tags": {
              "Name": "lesson-7-vpc-private-rt"
            },
            "tags_all": {
              "Name": "lesson-7-vpc-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-02f711da09b1c7f47"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:518036921225:route-table/rtb-0a75a4214b81c908a",
            "id": "rtb-0a75a4214b81c908a",
            "owner_id": "518036921225",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-078750e7bdc1fb90f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lesson-7-vpc-public-rt"
            },
            "tags_all": {
              "Name": "lesson-7-vpc-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-02f711da09b1c7f47"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05da82162a566a0af",
            "region": "eu-central-1",
            "route_table_id": "rtb-0d8c82d8e0d8554c7",
            "subnet_id": "subnet-0fdf55d1260176184"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f7180a6101a7624",
            "region": "eu-central-1",
            "route_table_id": "rtb-0d8c82d8e0d8554c7",
            "subnet_id": "subnet-0b833cf382fad8759"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b0954c307225dc1",
            "region": "eu-central-1",
            "route_table_id": "rtb-0d8c82d8e0d8554c7",
            "subnet_id": "subnet-03195fc694672b27d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ac06ebac695fbb6",
            "region": "eu-central-1",
            "route_table_id": "rtb-0a75a4214b81c908a",
            "subnet_id": "subnet-0b1d10fb5ea6ede0b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0282aeb6ce891146c",
            "region": "eu-central-1",
            "route_table_id": "rtb-0a75a4214b81c908a",
            "subnet_id": "subnet-0dfaf10244b9de6c0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07cd4888a922d2bed",
            "region": "eu-central-1",
            "route_table_id": "rtb-0a75a4214b81c908a",
            "subnet_id": "subnet-0039474f6c7a65b11"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:518036921225:subnet/subnet-0fdf55d1260176184",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fdf55d1260176184",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "518036921225",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "lesson-7-vpc-private-subnet-1"
            },
            "tags_all": {
              "Name": "lesson-7-vpc-private-subnet-1"
            },
            "vpc_id": "vpc-02f711da09b1c7f47"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:518036921225:subnet/subnet-0b833cf382fad8759",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b833cf382fad8759",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "518036921225",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "lesson-7-vpc-private-subnet-2"
            },
            "tags_all": {
              "Name": "lesson-7-vpc-private-subnet-2"
            },
            "vpc_id": "vpc-02f711da09b1c7f47"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:518036921225:subnet/subnet-03195fc694672b27d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03195fc694672b27d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "518036921225",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "lesson-7-vpc-private-subnet-3"
            },
            "tags_all": {
              "Name": "lesson-7-vpc-private-subnet-3"
            },
            "vpc_id": "vpc-02f711da09b1c7f47"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:518036921225:subnet/subnet-0b1d10fb5ea6ede0b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1d10fb5ea6ede0b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "518036921225",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "lesson-7-vpc-public-subnet-1"
            },
            "tags_all": {
              "Name": "lesson-7-vpc-public-subnet-1"
            },
            "vpc_id": "vpc-02f711da09b1c7f47"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:518036921225:subnet/subnet-0dfaf10244b9de6c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dfaf10244b9de6c0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "518036921225",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "lesson-7-vpc-public-subnet-2"
            },
            "tags_all": {
              "Name": "lesson-7-vpc-public-subnet-2"
            },
            "vpc_id": "vpc-02f711da09b1c7f47"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:518036921225:subnet/subnet-0039474f6c7a65b11",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0039474f6c7a65b11",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "518036921225",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "lesson-7-vpc-public-subnet-3"
            },
            "tags_all": {
              "Name": "lesson-7-vpc-public-subnet-3"
            },
            "vpc_id": "vpc-02f711da09b1c7f47"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:518036921225:vpc/vpc-02f711da09b1c7f47",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b9f415101489a2b7",
            "default_route_table_id": "rtb-0e051a321c2d5a114",
            "default_security_group_id": "sg-047fcb445d3de3567",
            "dhcp_options_id": "dopt-09df7485f0eca8641",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02f711da09b1c7f47",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e051a321c2d5a114",
            "owner_id": "518036921225",
            "region": "eu-central-1",
            "tags": {
              "Name": "lesson-7-vpc-vpc"
            },
            "tags_all": {
              "Name": "lesson-7-vpc-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}